@@ -11,6 +11,12 @@
 	"no_reason": "No reason given.",
 	"moved_by": "Moved by {{user}}",
 	"developed_by": "Developed by {{user}}",
+	"help_title": "{{bot_name}} Help",
+	"help_command_title": "{{bot_name}} `{{command}}` Help",
+	"help_group_title": "{{bot_name}} Help ({{page}}/{{total_pages}})",
+	"help_no_command": "The command `{{command}}` is not found in the help.",
+	"help_changelog_title": "{{bot_name}} Changelog ({{page}}/{{total_pages}})",
+	"version_footer": "Version {{version}}",
 	"error": "Error",
 	"error_occurred": "{{user}}, There was an error trying to complete your request. The error has been logged. I am very sorry.",
 	"not_initialized_user": "{{user}}, I am not initialized yet. Please try again in a few minutes.\n\nIf you are still having issues, please contact the an administrator.",
